--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EQD2Converter"
         mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type=local:ViewModel, IsDesignTimeCreatable=True}"
         Title="EQD2Converter" Height="600" Width="800" Background="AliceBlue" WindowStartupLocation="CenterScreen">
-
     <Window.Resources>
         <Style x:Key="ColumnElementStyle" TargetType="TextBlock">
             <Setter Property="Margin" Value="10,0,10,0" />
@@ -54,49 +54,61 @@
             <ComboBox x:Name="ComboBox" Width="100" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
             <Label Content="Convert to:" VerticalAlignment="Center"></Label>
             <ComboBox x:Name="ComboBox2" Width="80" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
-            <Button Margin="10,0,0,0"  Height="30" Width="200" Content="Create plan..." Click="Button_Click"></Button>
-            <Button Margin="10,0,0,0"  Height="30" Width="100" Content="Preview" Click="Button_Click_1"></Button>
-            <Button Margin="10,0,0,0"  Height="30" Width="60" Content="Help" HorizontalAlignment="Right" Click="Button_Click_2"></Button>
+            <Button Margin="10,0,0,0"  Height="30" Width="200" Content="Create plan..." Command="{Binding button1Command}"></Button>
+            <Button Margin="10,0,0,0"  Height="30" Width="100" Content="Preview" ></Button>
+            <Button Margin="10,0,0,0"  Height="30" Width="60" Content="Help" HorizontalAlignment="Right" Command="{Binding buttonHelpCommand}"></Button>
         </StackPanel>
 
         <Grid Grid.Row="1" HorizontalAlignment="Stretch" Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="1.2*"/>
+                    <ColumnDefinition Width="3*"/>
+                </Grid.ColumnDefinitions>
+                <Border Grid.Column="0" Background="CornflowerBlue" CornerRadius="4" Margin="5,0,5,0">
+                    <TextBlock Text="StructureId" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
+                </Border>
+                <Border Grid.Column="1" Background="CornflowerBlue" CornerRadius="4" Margin="5,0,5,0">
+                    <TextBlock Text="Alpha/Beta Ratio" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
+                </Border>
+                <Border Grid.Column="2" Background="CornflowerBlue" CornerRadius="4" Margin="5,0,5,0">
+                    <TextBlock Text="Structure Label" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
+                </Border>
+            </Grid>
+            
+            <ListView Grid.Column="0" Grid.Row="1" ItemsSource="{Binding AlphaBetaMappings, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedMapping, UpdateSourceTrigger=PropertyChanged}"
+                      HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid HorizontalAlignment="Stretch">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="1.2*"/>
+                                <ColumnDefinition Width="3*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding StructureId}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding AlphaBetaRatio}" HorizontalAlignment="Center"/>
+                            <TextBlock Grid.Column="2" Text="{Binding StructureLabel}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-            <DataGrid Margin="0,10,10,10" Grid.Column="0" x:Name="DataGrid1" IsReadOnly="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" CanUserDeleteRows="False" HorizontalAlignment="Left" Height="Auto" MaxHeight="{Binding RelativeSource={RelativeSource AncestorType={x:Type Grid}}, Path=ActualHeight}"  VerticalAlignment="Top" Width="500" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible"  SourceUpdated="DataGrid_SourceUpdated">
-                <DataGrid.Columns>
-                    <DataGridTextColumn IsReadOnly="True" Header="Structure" Width="70*" Binding="{Binding Structure, Mode=TwoWay, NotifyOnSourceUpdated=True}" ElementStyle="{StaticResource ColumnElementStyle}"/>
-                    <DataGridTextColumn IsReadOnly="False" Header="Alpha/Beta" Width="30*" Binding="{Binding AlphaBeta, Mode=TwoWay, NotifyOnTargetUpdated=True}" ElementStyle="{StaticResource ColumnElementStyle}">
-                        <DataGridTextColumn.EditingElementStyle>
-                            <Style TargetType="TextBox">
-                                <EventSetter Event="TextChanged" Handler="OnTextChanged" />
-                            </Style>
-                        </DataGridTextColumn.EditingElementStyle>
-                    </DataGridTextColumn>
-                </DataGrid.Columns>
-
-                <DataGrid.CellStyle>
-                    <Style TargetType="DataGridCell">
-                        <Style.Triggers>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Background" Value="Transparent"/>
-                                <Setter Property="Foreground" Value="Black"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </DataGrid.CellStyle>
-            </DataGrid>
-            <StackPanel Orientation="Vertical" Grid.Column="1" Margin="0,10,10,10" HorizontalAlignment="Stretch">
-                <CheckBox x:Name="ForceConversionCheckBox" Content="Force edge conversion?" Height="20" VerticalAlignment="Top" IsChecked="False" Unchecked="ForceConversionCheckBox_Checked" Checked="ForceConversionCheckBox_Checked"></CheckBox>
+            <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" Margin="0,10,10,10" HorizontalAlignment="Stretch">
+                <CheckBox x:Name="ForceConversionCheckBox" Content="Force edge conversion?" Height="20" VerticalAlignment="Top" IsChecked="{Binding ForceConversionCheckBox_Checked, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBlock TextWrapping="Wrap" x:Name="ForcedConversionLabel" Width="250" HorizontalAlignment="Stretch"/>
                 <StackPanel x:Name="ForceConversionMarginStackPanel" Orientation="Horizontal" Visibility="Hidden" HorizontalAlignment="Left">
                     <Label Content="Margin: " HorizontalAlignment="Left"></Label>
-                    <TextBox x:Name="ForceConversionMargin" Width="50" Height="20" VerticalContentAlignment="Center" TextChanged="ForceConversionMargin_TextChanged" HorizontalAlignment="Left"></TextBox>
+                    <TextBox x:Name="ForceConversionMargin" Width="50" Height="20" VerticalContentAlignment="Center" HorizontalAlignment="Left"></TextBox>
                     <Label Content=" mm" HorizontalAlignment="Left"></Label>
                 </StackPanel>
             </StackPanel>
