--- a/DescriptionView.xaml
+++ b/DescriptionView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EQD2Converter"
+             xmlns:behaviours="clr-namespace:EQD2Converter.Behaviours"
              xmlns:e="http://schemas.microsoft.com/expression/2010/interactivity" 
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
@@ -28,7 +29,7 @@
             </Grid>
             <Border Grid.Row="1" Height="1" HorizontalAlignment="Stretch" Margin="10,5,10,0" Background="CornflowerBlue"/>
             <!--<TextBlock Grid.Row="2" Margin="10,5,10,0" FontSize="12" Text="{Binding Description}" TextWrapping="Wrap"/>-->
-            <TextBlock Grid.Row="2" Margin="10,5,10,0" FontSize="12" local:HtmlTextBoxProperties.HtmlText="{Binding Path=Description}" TextWrapping="Wrap"/>
+            <TextBlock Grid.Row="2" Margin="10,5,10,0" FontSize="12" behaviours:HtmlTextBoxProperties.HtmlText="{Binding Path=Description}" TextWrapping="Wrap"/>
 
 
 
